--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,3 +1,12 @@
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  line-height: 1.6;
+  height: auto !important;
+  box-sizing: border-box;
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,53 +23,4 @@ body {
 }
 a:focus {
   text-decoration: none;
-}
-.card-wrap {
-  margin: 15px 16px;
-  background-color: #fff;
-  border: 1px solid #cfdbe2;
-  border-radius: 4px;
-}
-.login-page .login-content-wrap {
-  min-height: 550px;
-  height: calc(100vh);
-  background: url(http://p4pnhkusl.bkt.clouddn.com/banner.jpg);
-  background-size: cover;
-}
-.login-page .login-content-wrap .login-content {
-  position: relative;
-  top: 50%;
-  display: flex;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 20px;
-  transform: translateY(-50%);
-  align-items: center;
-  justify-content: center;
-}
-.login-page .login-content-wrap .login-content .word {
-  flex: 7;
-  line-height: 1.4;
-  color: #fff;
-  font-size: 64px;
-  font-weight: bold;
-}
-.login-page .login-content-wrap .login-content .login-box {
-  position: relative;
-  flex: 4;
-}
-.login-page .login-content-wrap .right-container {
-  flex: 1;
-  height: 100%;
-  padding: 0 0 30px;
-  overflow: auto;
-  background: #e8eef2;
-}
-.homeWrap {
-  padding: 300px 0;
-  text-align: center;
-}
-.homeWrap h2 {
-  font-size: 36px;
-  font-weight: 700;
 }
